- Added the shortcut /fg to /fixgrass. 
- Added /uban (uban is basically xban without the ipban.)
- Removed useless code that used up to 90% RAM for no good reason
- Updated some GUI code so Player and map lists update quicker and they now don't leak memory
- Updated some of the MySQL code to prevent memory loss and make transactions to the databse quicker
- Fixed /reload
- Added /allowguns - allows guns on certain maps
- Titles with colours are allowed more than 30 letters
- Added /agree - new guests have to agree to the rules
- Added option in the properties to allow or disallow players to teleport to people with higher ranks

v4.7.0.0
- Added new game: Countdown
-Added /splace - Measures a set [distance] and places a stone block at each end. Made by Woldoc, originally named /set.
-Added /chain - Inspired by the StormCom command of the same name, /chain sends a "chain" of brown mushrooms. Upon coming into contact with a block other than air or a level's side wall, it will pull that block back to the start of the chain. 
- Added color code information to /help.
- Fixed issue where Player.cs doesn't check for all private network IPs starting with 172 (GitHub issue #2)
- Hopefully fixed issue where certain color codes could sometimes crash the client (GitHub issue #21)
- Updater should no longer crash when updating (Github issue #3)
- /zz no longer shows an error when using "/zz blockname" (Github issue #7)
- Player, Level, and Server now use an ExtrasCollection member named "Extras" to help manage extra data needed by custom commands
- Custom $ replacements are now possible via file text/custom$s.txt
- Fixed /fixgrass light not converting shaded grass to dirt.
- Fixed an issue in CmdLoad.cs where it would constantly get stuck on corrupted levels
- Removed unused files from the source code repository
- Increased MCForge heartbeat delay to reduce website load
- Removed buggy block permissions from block.properties (flagbase and odoor_airs)